--- a/components/common/ThemeToggle/ThemeToggle.module.scss
+++ b/components/common/ThemeToggle/ThemeToggle.module.scss
@@ -1,7 +1,7 @@
 @import '../../../styles/vars.scss';
 @import '../../../styles/mixins.scss';
 
-$cell: 12px;
+$cell: 10px;
 $grid-size: $cell * 2;
 
 .toggle {
